# FunctorTest

./: README.md  haskellFunctors.cabal  stack.yaml
app/: Main.hs
src/: FunctorInstances.hs
test/: Spec.hs
