name:                haskellFunctors
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskellFunctors#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          sebastian0092@gmail.com
copyright:           2016 Sebastian Pulido
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FunctorInstances
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskellFunctors-exec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellFunctors  
  ghc-options:       
  default-language:    Haskell2010

test-suite haskellFunctors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellFunctors
                     , hspec == 2.3.2
                     , QuickCheck == 2.9.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellFunctors
